changes to Task1

--- a/SourceCode/2024/Feb 2024/Sravani/Task 1/Main.xaml
+++ b/SourceCode/2024/Feb 2024/Sravani/Task 1/Main.xaml
@@ -73,6 +73,6 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="DisplayWelcomeMessage" sap:VirtualizedContainerService.HintSize="388,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Welcome to the UIPATH training&quot;]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="DisplayWelcomeMessage" sap:VirtualizedContainerService.HintSize="388,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Welcome to the UIPATH Training&quot;]" />
   </Sequence>
 </Activity>
